<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Space android:layout_width="fill_parent" android:layout_height="101.5dip" />
    <TextView android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/tv_tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_init_step_connect_unlock_sim_sim_unavailable" android:includeFontPadding="false" android:lineSpacingMultiplier="1.1" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" />
    <TextView android:textSize="20.0sp" android:textColor="@color/AAAAAA" android:id="@id/tv_tips2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_init_step_connect_unlock_sim_sim_unavailable_tips" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:letterSpacing="0.02" android:textFontWeight="400" />
    <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="30.0sp" android:textColor="@color/selector_000000_ffffff" android:gravity="center" android:id="@id/tv_continue_on_wifi" android:background="@drawable/selector_ff4d00_00000000_r10" android:layout_width="fill_parent" android:layout_height="36.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/text_init_step_connect_unlock_sim_continue_on_wi_fi" android:fontFamily="@font/power_grotesk_regular" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" android:textFontWeight="400" />
</androidx.appcompat.widget.LinearLayoutCompat>