<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_normal" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.airbnb.lottie.LottieAnimationView android:id="@id/lav_animator_updating" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="parent" app:lottie_autoPlay="true" app:lottie_rawRes="@raw/anim_ota_updating" app:lottie_repeatCount="-1" app:lottie_repeatMode="restart" />
        <tech.rabbit.r1launcher.ota.CircularProgressBar android:id="@id/progress_bar" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="5.0dip" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv_complete" android:visibility="gone" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/ic_ota_complete" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <tech.rabbit.r1launcher.ota.MarqueeTextView android:textSize="22.0sp" android:textColor="@color/white" android:gravity="start" android:id="@id/tv_info" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:maxLines="1" android:singleLine="true" android:layout_weight="1.0" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/progress_bar" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="16.0sp" android:textColor="#ffaaaaaa" android:id="@id/tv_tip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="11.0dip" android:text="stay connected to wi-fi and power" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/progress_bar" app:layout_constraintTop_toBottomOf="@id/tv_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/iv_vector" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:src="@drawable/ic_ota_vector" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/tv_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="9.0dip" android:text="@string/ota_tip_update_error" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_vector" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="24.0sp" android:textColor="@color/selector_000000_ffffff" android:gravity="center_vertical" android:id="@id/tv_retry" android:background="@drawable/selector_ff4d00_00000000_r10" android:focusable="true" android:focusableInTouchMode="true" android:nextFocusDown="@id/tv_manager_wifi" android:layout_width="fill_parent" android:layout_height="29.0dip" android:text="@string/ota_retry" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400">
                <requestFocus />
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="24.0sp" android:textColor="@color/selector_000000_ffffff" android:gravity="center_vertical" android:id="@id/tv_manager_wifi" android:background="@drawable/selector_ff4d00_00000000_r10" android:focusable="true" android:focusableInTouchMode="true" android:nextFocusUp="@id/tv_retry" android:nextFocusDown="@id/tv_poweroff" android:layout_width="fill_parent" android:layout_height="29.0dip" android:text="@string/ota_manage_wifi" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="24.0sp" android:textColor="@color/selector_000000_ffffff" android:gravity="center_vertical" android:id="@id/tv_poweroff" android:background="@drawable/selector_ff4d00_00000000_r10" android:focusable="true" android:focusableInTouchMode="true" android:nextFocusUp="@id/tv_manager_wifi" android:layout_width="fill_parent" android:layout_height="29.0dip" android:text="@string/settings_page_power_off" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>